--- a/config/helm/crds/core/patches/versions/v1alpha3/clusterresourcesetbindings.addons.cluster.x-k8s.io.yaml
+++ b/config/helm/crds/core/patches/versions/v1alpha3/clusterresourcesetbindings.addons.cluster.x-k8s.io.yaml
@@ -1,31 +1,7 @@
-apiVersion: apiextensions.k8s.io/v1
-kind: CustomResourceDefinition
-metadata:
-  annotations:
-    controller-gen.kubebuilder.io/version: v0.2.9
-  creationTimestamp: null
-  labels:
-    app.giantswarm.io/branch: '{{ .Values.project.branch }}'
-    app.giantswarm.io/commit: '{{ .Values.project.commit }}'
-    app.kubernetes.io/instance: '{{ .Release.Name }}'
-    app.kubernetes.io/managed-by: '{{ .Release.Service }}'
-    app.kubernetes.io/name: cluster-api
-    app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
-    cluster.x-k8s.io/provider: cluster-api
-    helm.sh/chart: cluster-api
-  name: clusterresourcesetbindings.addons.cluster.x-k8s.io
-spec:
-  group: addons.cluster.x-k8s.io
-  names:
-    categories:
-    - cluster-api
-    kind: ClusterResourceSetBinding
-    listKind: ClusterResourceSetBindingList
-    plural: clusterresourcesetbindings
-    singular: clusterresourcesetbinding
-  scope: Namespaced
-  versions:
-  - name: v1alpha3
+- op: add
+  path: /spec/versions/-
+  value:
+    name: v1alpha3
     schema:
       openAPIV3Schema:
         description: ClusterResourceSetBinding lists all matching ClusterResourceSets with the cluster it belongs to.
@@ -63,8 +39,8 @@ spec:
                           kind:
                             description: 'Kind of the resource. Supported kinds are: Secrets and ConfigMaps.'
                             enum:
-                            - Secret
-                            - ConfigMap
+                              - Secret
+                              - ConfigMap
                             type: string
                           lastAppliedTime:
                             description: LastAppliedTime identifies when this resource was last applied to the cluster.
@@ -75,13 +51,13 @@ spec:
                             minLength: 1
                             type: string
                         required:
-                        - applied
-                        - kind
-                        - name
+                          - applied
+                          - kind
+                          - name
                         type: object
                       type: array
                   required:
-                  - clusterResourceSetName
+                    - clusterResourceSetName
                   type: object
                 type: array
             type: object
@@ -90,9 +66,3 @@ spec:
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
