--- a/config/helm/crds/core/patches/versions/v1alpha3/clusterresourcesets.addons.cluster.x-k8s.io.yaml
+++ b/config/helm/crds/core/patches/versions/v1alpha3/clusterresourcesets.addons.cluster.x-k8s.io.yaml
@@ -1,31 +1,7 @@
-apiVersion: apiextensions.k8s.io/v1
-kind: CustomResourceDefinition
-metadata:
-  annotations:
-    controller-gen.kubebuilder.io/version: v0.2.9
-  creationTimestamp: null
-  labels:
-    app.giantswarm.io/branch: '{{ .Values.project.branch }}'
-    app.giantswarm.io/commit: '{{ .Values.project.commit }}'
-    app.kubernetes.io/instance: '{{ .Release.Name }}'
-    app.kubernetes.io/managed-by: '{{ .Release.Service }}'
-    app.kubernetes.io/name: cluster-api
-    app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
-    cluster.x-k8s.io/provider: cluster-api
-    helm.sh/chart: cluster-api
-  name: clusterresourcesets.addons.cluster.x-k8s.io
-spec:
-  group: addons.cluster.x-k8s.io
-  names:
-    categories:
-    - cluster-api
-    kind: ClusterResourceSet
-    listKind: ClusterResourceSetList
-    plural: clusterresourcesets
-    singular: clusterresourceset
-  scope: Namespaced
-  versions:
-  - name: v1alpha3
+- op: add
+  path: /spec/versions/-
+  value:
+    name: v1alpha3
     schema:
       openAPIV3Schema:
         description: ClusterResourceSet is the Schema for the clusterresourcesets API
@@ -61,8 +37,8 @@ spec:
                             type: string
                           type: array
                       required:
-                      - key
-                      - operator
+                        - key
+                        - operator
                       type: object
                     type: array
                   matchLabels:
@@ -79,25 +55,25 @@ spec:
                     kind:
                       description: 'Kind of the resource. Supported kinds are: Secrets and ConfigMaps.'
                       enum:
-                      - Secret
-                      - ConfigMap
+                        - Secret
+                        - ConfigMap
                       type: string
                     name:
                       description: Name of the resource that is in the same namespace with ClusterResourceSet object.
                       minLength: 1
                       type: string
                   required:
-                  - kind
-                  - name
+                    - kind
+                    - name
                   type: object
                 type: array
               strategy:
                 description: Strategy is the strategy to be used during applying resources. Defaults to ApplyOnce. This field is immutable.
                 enum:
-                - ApplyOnce
+                  - ApplyOnce
                 type: string
             required:
-            - clusterSelector
+              - clusterSelector
             type: object
           status:
             description: ClusterResourceSetStatus defines the observed state of ClusterResourceSet
@@ -127,8 +103,8 @@ spec:
                       description: Type of condition in CamelCase or in foo.example.com/CamelCase. Many .condition.type values are consistent across resources like Available, but because arbitrary conditions can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
                   required:
-                  - status
-                  - type
+                    - status
+                    - type
                   type: object
                 type: array
               observedGeneration:
@@ -141,9 +117,3 @@ spec:
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
