--- a/config/helm/crds/core/patches/versions/v1alpha3/machinehealthchecks.cluster.x-k8s.io.yaml
+++ b/config/helm/crds/core/patches/versions/v1alpha3/machinehealthchecks.cluster.x-k8s.io.yaml
@@ -1,59 +1,19 @@
-apiVersion: apiextensions.k8s.io/v1
-kind: CustomResourceDefinition
-metadata:
-  annotations:
-    cert-manager.io/inject-ca-from: capi-webhook-system/capi-serving-cert
-    controller-gen.kubebuilder.io/version: v0.2.9
-  creationTimestamp: null
-  labels:
-    app.giantswarm.io/branch: '{{ .Values.project.branch }}'
-    app.giantswarm.io/commit: '{{ .Values.project.commit }}'
-    app.kubernetes.io/instance: '{{ .Release.Name }}'
-    app.kubernetes.io/managed-by: '{{ .Release.Service }}'
-    app.kubernetes.io/name: cluster-api
-    app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
-    cluster.x-k8s.io/provider: cluster-api
-    helm.sh/chart: cluster-api
-  name: machinehealthchecks.cluster.x-k8s.io
-spec:
-  conversion:
-    strategy: Webhook
-    webhook:
-      clientConfig:
-        caBundle: Cg==
-        service:
-          name: capi-webhook-service
-          namespace: capi-webhook-system
-          path: /convert
-      conversionReviewVersions:
-      - v1
-      - v1beta1
-  group: cluster.x-k8s.io
-  names:
-    categories:
-    - cluster-api
-    kind: MachineHealthCheck
-    listKind: MachineHealthCheckList
-    plural: machinehealthchecks
-    shortNames:
-    - mhc
-    - mhcs
-    singular: machinehealthcheck
-  scope: Namespaced
-  versions:
-  - additionalPrinterColumns:
-    - description: Maximum number of unhealthy machines allowed
-      jsonPath: .spec.maxUnhealthy
-      name: MaxUnhealthy
-      type: string
-    - description: Number of machines currently monitored
-      jsonPath: .status.expectedMachines
-      name: ExpectedMachines
-      type: integer
-    - description: Current observed healthy machines
-      jsonPath: .status.currentHealthy
-      name: CurrentHealthy
-      type: integer
+- op: add
+  path: /spec/versions/-
+  value:
+    additionalPrinterColumns:
+      - description: Maximum number of unhealthy machines allowed
+        jsonPath: .spec.maxUnhealthy
+        name: MaxUnhealthy
+        type: string
+      - description: Number of machines currently monitored
+        jsonPath: .status.expectedMachines
+        name: ExpectedMachines
+        type: integer
+      - description: Current observed healthy machines
+        jsonPath: .status.currentHealthy
+        name: CurrentHealthy
+        type: integer
     name: v1alpha3
     schema:
       openAPIV3Schema:
@@ -76,8 +36,8 @@ spec:
                 type: string
               maxUnhealthy:
                 anyOf:
-                - type: integer
-                - type: string
+                  - type: integer
+                  - type: string
                 description: Any further remediation is only allowed if at most "MaxUnhealthy" machines selected by "selector" are not healthy.
                 x-kubernetes-int-or-string: true
               nodeStartupTimeout:
@@ -128,8 +88,8 @@ spec:
                             type: string
                           type: array
                       required:
-                      - key
-                      - operator
+                        - key
+                        - operator
                       type: object
                     type: array
                   matchLabels:
@@ -152,16 +112,16 @@ spec:
                       minLength: 1
                       type: string
                   required:
-                  - status
-                  - timeout
-                  - type
+                    - status
+                    - timeout
+                    - type
                   type: object
                 minItems: 1
                 type: array
             required:
-            - clusterName
-            - selector
-            - unhealthyConditions
+              - clusterName
+              - selector
+              - unhealthyConditions
             type: object
           status:
             description: Most recently observed status of MachineHealthCheck resource
@@ -191,8 +151,8 @@ spec:
                       description: Type of condition in CamelCase or in foo.example.com/CamelCase. Many .condition.type values are consistent across resources like Available, but because arbitrary conditions can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
                   required:
-                  - status
-                  - type
+                    - status
+                    - type
                   type: object
                 type: array
               currentHealthy:
@@ -225,9 +185,3 @@ spec:
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
