--- a/config/helm/crds/bootstrap/bases/kubeadmconfigtemplates.bootstrap.cluster.x-k8s.io.yaml
+++ b/config/helm/crds/bootstrap/bases/kubeadmconfigtemplates.bootstrap.cluster.x-k8s.io.yaml
@@ -39,7 +39,15 @@ spec:
     plural: kubeadmconfigtemplates
     singular: kubeadmconfigtemplate
   scope: Namespaced
-  versions: []
+  versions:
+    - name: v1alpha2
+      schema: {}
+      served: true
+      storage: false
+    - name: v1alpha3
+      schema: {}
+      served: true
+      storage: true
 status:
   acceptedNames:
     kind: ""
