--- a/config/helm/crds/controlplane/bases/kubeadmcontrolplanes.controlplane.cluster.x-k8s.io.yaml
+++ b/config/helm/crds/controlplane/bases/kubeadmcontrolplanes.controlplane.cluster.x-k8s.io.yaml
@@ -40,7 +40,46 @@ spec:
       - kcp
     singular: kubeadmcontrolplane
   scope: Namespaced
-  versions: []
+  versions:
+    - additionalPrinterColumns:
+        - description: This denotes whether or not the control plane has the uploaded kubeadm-config configmap
+          jsonPath: .status.initialized
+          name: Initialized
+          type: boolean
+        - description: KubeadmControlPlane API Server is ready to receive requests
+          jsonPath: .status.ready
+          name: API Server Available
+          type: boolean
+        - description: Kubernetes version associated with this control plane
+          jsonPath: .spec.version
+          name: Version
+          type: string
+        - description: Total number of non-terminated machines targeted by this control plane
+          jsonPath: .status.replicas
+          name: Replicas
+          type: integer
+        - description: Total number of fully running and ready control plane machines
+          jsonPath: .status.readyReplicas
+          name: Ready
+          type: integer
+        - description: Total number of non-terminated machines targeted by this control plane that have the desired template spec
+          jsonPath: .status.updatedReplicas
+          name: Updated
+          type: integer
+        - description: Total number of unavailable machines targeted by this control plane
+          jsonPath: .status.unavailableReplicas
+          name: Unavailable
+          type: integer
+      name: v1alpha3
+      schema: {}
+      served: true
+      storage: true
+      subresources:
+        scale:
+          labelSelectorPath: .status.selector
+          specReplicasPath: .spec.replicas
+          statusReplicasPath: .status.replicas
+        status: {}
 status:
   acceptedNames:
     kind: ""
