--- a/config/helm/crds/core/bases/clusterresourcesetbindings.addons.cluster.x-k8s.io.yaml
+++ b/config/helm/crds/core/bases/clusterresourcesetbindings.addons.cluster.x-k8s.io.yaml
@@ -24,7 +24,13 @@ spec:
     plural: clusterresourcesetbindings
     singular: clusterresourcesetbinding
   scope: Namespaced
-  versions: []
+  versions:
+    - name: v1alpha3
+      schema: {}
+      served: true
+      storage: true
+      subresources:
+        status: {}
 status:
   acceptedNames:
     kind: ""
