--- a/config/helm/crds/core/bases/machinepools.exp.cluster.x-k8s.io.yaml
+++ b/config/helm/crds/core/bases/machinepools.exp.cluster.x-k8s.io.yaml
@@ -26,7 +26,29 @@ spec:
       - mp
     singular: machinepool
   scope: Namespaced
-  versions: []
+  versions:
+    - additionalPrinterColumns:
+        - description: MachinePool replicas count
+          jsonPath: .status.replicas
+          name: Replicas
+          type: string
+        - description: MachinePool status such as Terminating/Pending/Provisioning/Running/Failed etc
+          jsonPath: .status.phase
+          name: Phase
+          type: string
+        - description: Kubernetes version associated with this MachinePool
+          jsonPath: .spec.template.spec.version
+          name: Version
+          type: string
+      name: v1alpha3
+      schema: {}
+      served: true
+      storage: true
+      subresources:
+        scale:
+          specReplicasPath: .spec.replicas
+          statusReplicasPath: .status.replicas
+        status: {}
 status:
   acceptedNames:
     kind: ""
