Add kustomize patch for CRD certificate annotation

--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -33,3 +33,17 @@ patchesStrategicMerge:
   - webhook-certificate.yaml
   - service-add-metrics-port.yaml
   - certificate.yaml
+
+patches:
+  - path: crd_core_cainjection.yaml
+    target:
+      kind: CustomResourceDefinition
+      labelSelector: cluster.x-k8s.io/provider=cluster-api
+  - path: crd_bootstrap_cainjection.yaml
+    target:
+      kind: CustomResourceDefinition
+      labelSelector: cluster.x-k8s.io/provider=bootstrap-kubeadm
+  - path: crd_controlplane_cainjection.yaml
+    target:
+      kind: CustomResourceDefinition
+      labelSelector: cluster.x-k8s.io/provider=control-plane-kubeadm
