--- a/config/helm/crds/core/bases/machinesets.cluster.x-k8s.io.yaml
+++ b/config/helm/crds/core/bases/machinesets.cluster.x-k8s.io.yaml
@@ -2,9 +2,8 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    cert-manager.io/inject-ca-from: capi-webhook-system/capi-serving-cert
+    cert-manager.io/inject-ca-from: '{{ .Release.Namespace }}/capi-serving-cert'
     controller-gen.kubebuilder.io/version: v0.2.9
-  creationTimestamp: null
   labels:
     app.giantswarm.io/branch: '{{ .Values.project.branch }}'
     app.giantswarm.io/commit: '{{ .Values.project.commit }}'
