--- a/config/helm/crds/controlplane/bases/kubeadmcontrolplanes.controlplane.cluster.x-k8s.io.yaml
+++ b/config/helm/crds/controlplane/bases/kubeadmcontrolplanes.controlplane.cluster.x-k8s.io.yaml
@@ -23,8 +23,9 @@ spec:
         caBundle: Cg==
         service:
           name: capi-kubeadm-control-plane-webhook-service
-          namespace: capi-webhook-system
+          namespace: '{{ .Release.Namespace }}'
           path: /convert
+          port: 443
       conversionReviewVersions:
         - v1
         - v1beta1
