--- a/config/helm/crds/core/bases/machinehealthchecks.cluster.x-k8s.io.yaml
+++ b/config/helm/crds/core/bases/machinehealthchecks.cluster.x-k8s.io.yaml
@@ -22,8 +22,9 @@ spec:
         caBundle: Cg==
         service:
           name: capi-webhook-service
-          namespace: capi-webhook-system
+          namespace: '{{ .Release.Namespace }}'
           path: /convert
+          port: 443
       conversionReviewVersions:
         - v1
         - v1beta1
