--- a/config/helm/crds/core/bases/machinepools.exp.cluster.x-k8s.io.yaml
+++ b/config/helm/crds/core/bases/machinepools.exp.cluster.x-k8s.io.yaml
@@ -15,6 +15,19 @@ metadata:
     helm.sh/chart: cluster-api
   name: machinepools.exp.cluster.x-k8s.io
 spec:
+  conversion:
+    strategy: Webhook
+    webhook:
+      clientConfig:
+        caBundle: Cg==
+        service:
+          name: capi-webhook-service
+          namespace: '{{ .Release.Namespace }}'
+          path: /convert
+          port: 443
+      conversionReviewVersions:
+        - v1
+        - v1beta1
   group: exp.cluster.x-k8s.io
   names:
     categories:
