--- a/helm/cluster-api/templates/crd-install/crd-rbac.yaml
+++ b/helm/cluster-api/templates/crd-install/crd-rbac.yaml
@@ -49,7 +49,7 @@ metadata:
     {{- include "cluster-api.CRDInstallAnnotations" . | nindent 4 }}
   labels:
     app.kubernetes.io/component: {{ include "cluster-api.crdInstall" . | quote }}
-    {{- include "cluster-api.labels" . | nindent 4 }}
+    {{- include "cluster-api.selectorLabels" . | nindent 4 }}
     role: {{ include "cluster-api.CRDInstallSelector" . | quote }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
