Fix crd-install Job volume names

--- a/helm/cluster-api/templates/crd-install/crd-configmap.yaml
+++ b/helm/cluster-api/templates/crd-install/crd-configmap.yaml
@@ -10,7 +10,7 @@ allowed length for a configmap if they are combined.
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "cluster-api.crdInstall" . }}-{{ printf "%s-%s" (base (dir $path)) (trimSuffix ".yaml" (base $path)) }}
+  name: {{ include "cluster-api.crdInstall" . }}-{{ printf "%s-%s" (base (dir $path)) (trimSuffix ".yaml" (base $path) | trunc 63) }}
   namespace: {{ .Release.Namespace | quote }}
   annotations:
     # create hook dependencies in the right order
