Fix crd-install Job volume names

--- a/helm/cluster-api/templates/crd-install/crd-job.yaml
+++ b/helm/cluster-api/templates/crd-install/crd-job.yaml
@@ -42,7 +42,9 @@ spec:
         volumeMounts:
 {{- range $path, $_ := $.Files.Glob "files/**.yaml" }}
         - name: {{ printf "%s-%s" (base (dir $path)) (trimSuffix "-yaml" (base $path | replace "." "-") | trunc 63) }}
-          mountPath: /{{ $path | dir }}
+          mountPath: /{{ $path }}
+          subPath: {{base $path }}
+          readOnly: true
 {{- end }}
         resources:
           requests:
