--- a/helm/cluster-api/Chart.yaml
+++ b/helm/cluster-api/Chart.yaml
@@ -8,8 +8,8 @@ annotations:
   application.giantswarm.io/owners: |
     - catalog: default
       provider: aws
-      team: firecracker
+      team: phoenix
     - catalog: default
       provider: azure
-      team: celestial
-  config.giantswarm.io/version: 1.x.x
+      team: phoenix
+  config.giantswarm.io/version: upgrade-capi
